L7-S99 fixing mobile alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -149,7 +149,7 @@ p {
 }
 
 @media (max-width: 1028px) {
-  #title {
+  #title .container-fluid  {
     text-align: center;
   }
 
